uso de los formularios basicos en angular, usando ngmodel para la asignacion de los campos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         -->
         <ul>
           <!--  se  utiliza un pipe personalizado pasandole el sting de criteria que se utiliza en el ngModel-->
-          
+
           <!--Se utiliza los metodos output pasandole el metodo cityClicked
              se utiliza los metodos input para selection y city que en este caso son strings
            -->
@@ -55,3 +55,13 @@
   </div>
 </div>
 
+<hr>
+
+<div class="container">
+<div class="row">
+  <div class="col-9">
+    <app-contact></app-contact>
+  </div>
+  <div class="col-3">Data</div>
+</div>
+</div>
