--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,9 +59,9 @@
 
 <div class="container">
 <div class="row">
-  <div class="col-9">
+  <div class="col-6">
     <app-contact></app-contact>
   </div>
-  <div class="col-3">Data</div>
+  <div class="col-6"><app-contact-reactive></app-contact-reactive></div>
 </div>
 </div>
