--- a/src/app/contact-reactive/contact-reactive.component.html
+++ b/src/app/contact-reactive/contact-reactive.component.html
@@ -1,4 +1,4 @@
-<h1>Contact form</h1>
+<h1>Contact form {{name}}</h1>
 
 <!--Uso de formularios basicos-->
 <form (ngSubmit)="onSubmit()" [formGroup]="contactForm">
