--- a/src/app/form-new-item/form-new-item.component.html
+++ b/src/app/form-new-item/form-new-item.component.html
@@ -4,11 +4,12 @@
       <label for="newItem" class="col-form-label">New {{label}}</label>
     </div>
     <div class="col-auto">
-      <input type="text" id="newItem" class="form-control" #newItem>
-    </div>
+      <!--uso de ngModel para referenciarlo en este caso el name-->
+      <input type="text" id="newItem" name="newItem" class="form-control" [ngModel]="selection?.name"  #newItem>    </div>
     <div class="col-auto">
-
-      <button (click)="onAddNewItem(newItem.value)" type="button" class="btn "[ngClass]="[className]" >Add {{label}}</button>
+      <!--se utilizan los metodos creados pasando lso valores, ya sea aceptar o editar -->
+      <button *ngIf="!selection?.name" (click)="onAddNewItem(newItem.value); newItem.value=''" type="button" class="btn "[ngClass]="[className]" >Add {{label}}</button>
+      <button *ngIf="selection.name" (click)="onUpdateItem(selection, newItem.value); newItem.value=''" type="button" class="btn "[ngClass]="[className]" >Update {{label}}</button>
     </div>
   </div>
 </form>
