--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,9 @@
   <div class="row">
 
     <div class="col-md-6 my-3">
-      <app-form-new-item (newItemEvent)="addNewCity($event)" [label]="'city'" [className]="'btn-info'"></app-form-new-item>
+      <app-form-new-item [selection]="selection"
+       (updateItemEvent)="updateCity($event)"
+       (newItemEvent)="addNewCity($event)" [label]="'city'" [className]="'btn-info'"></app-form-new-item>
     </div>
 
     <div class="col-md-6 my-3">
@@ -15,15 +17,18 @@
       <p *ngIf="name">el nombres es :{{name}}</p>
       <input type="text" [(ngModel)]="name">
         -->
-        <ul>
+
           <!--  se  utiliza un pipe personalizado pasandole el sting de criteria que se utiliza en el ngModel-->
 
           <!--Se utiliza los metodos output pasandole el metodo cityClicked
              se utiliza los metodos input para selection y city que en este caso son strings
            -->
-          <app-cities *ngFor="let city of (cities| filter:criteria)" (cityClicked)="onCityClicked($event)"
+          <app-cities *ngFor="let city of (cities| filter:criteria)"
+          
+              (cityDeleteEvent)="onCityDelete($event)"
+              (citySelectedEvent)="onCitySelected($event)"
               [city]="city" [selection]="selection"></app-cities>
-        </ul>
+
         <!--
         <ul *ngFor="let city of cities">
           <li (click)="onCityClicked(city)" [ngClass]="{'alert alert-info':city===selection}">{{city}}</li>
@@ -32,7 +37,7 @@
 
 
       <div *ngIf="selection">
-        <p *ngIf="selection">Your city is:{{selection}}</p>
+        <p *ngIf="selection?.name">Your city is:{{selection?.name}}</p>
         <!--
           <button (click)="onClear()" *ngIf="selection">clear your city</button>
         -->
