--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
- 
+ ul{
+  list-style-type: none;
+ }
+
+ .overlay{
+  position:fixed;
+  width:100%;
+  height:100%;
+  background-color:rgba(0, 0, 0, 0.507);
+  z-index: 10;
+  display:flex;
+  align-items:center;
+  justify-content:center
+
+ }
