--- a/src/app/form-new-item/form-new-item.component.html
+++ b/src/app/form-new-item/form-new-item.component.html
@@ -5,11 +5,12 @@
     </div>
     <div class="col-auto">
       <!--uso de ngModel para referenciarlo en este caso el name-->
-      <input type="text" id="newItem" name="newItem" class="form-control" [ngModel]="selection?.name"  #newItem>    </div>
+      <input type="text" id="newItem" name="newItem" class="form-control" [ngModel]="selection?.name"  #newItem>
+    </div>
     <div class="col-auto">
       <!--se utilizan los metodos creados pasando lso valores, ya sea aceptar o editar -->
-      <button *ngIf="!selection?.name" (click)="onAddNewItem(newItem.value); newItem.value=''" type="button" class="btn "[ngClass]="[className]" >Add {{label}}</button>
-      <button *ngIf="selection?.name" (click)="onUpdateItem(selection, newItem.value); newItem.value=''" type="button" class="btn "[ngClass]="[className]" >Update {{label}}</button>
+      <button *ngIf="!selection?.name" (click)="onAddNewItem();" type="button" class="btn "[ngClass]="[className]" >Add {{label}}</button>
+      <button *ngIf="selection?.name" (click)="onUpdateItem(); " type="button" class="btn "[ngClass]="[className]" >Update {{label}}</button>
     </div>
   </div>
 </form>
